--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-for-studying-js-courses",
+  "name": "javascript-recent-parts",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
